YTG-#74 [알림페이지][클릭리스너] 알림페이지 아이템 클릭시 해당 게시물로 이동하는 기능 추가

--- a/features/alarm/src/main/res/layout/item_alarm.xml
+++ b/features/alarm/src/main/res/layout/item_alarm.xml
@@ -9,6 +9,10 @@
         <variable
             name="alarmItem"
             type="com.az.model.users.notices.DetailedNoticeData" />
+
+        <variable
+            name="listener"
+            type="com.az.alarm.adapter.holder.listener.AlarmItemListener" />
     </data>
 
     <LinearLayout
@@ -20,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorSemiBlack"
+            android:onClick="@{() -> listener.onClickAlarmItem(alarmItem.detailedPost.id)}"
             android:paddingVertical="22dp"
             android:paddingStart="30dp"
             android:paddingEnd="30dp">
