--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -82,9 +82,13 @@
 
     <fragment
         android:id="@+id/alarmFragment"
-        android:name="com.az.alarm.AlarmFragment"
+        android:name="com.az.alarm.view.AlarmFragment"
         android:label="AlarmFragment"
-        app:moduleName="alarm" />
+        app:moduleName="alarm" >
+        <action
+            android:id="@+id/action_alarmFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/detailsFragment"
